2006-07-14  Mark Wielaard  <mark@klomp.org>

	Revert to previous implementation.
	* java/awt/GridBagLayout.java (AdjustForGravity): Only adjust for
	constraints insets.

2006-07-14  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XToolkit.java
	(XToolkit): Install properties to SystemProperties
	rather than System, to avoid SecurityManager.
	(getImage(String)): Return error image when string is invalid.
	(createImage(URL)): Moved image loading to helper method.
	(createImage(ImageProducer)): Implemented.
	(createImage(byte[],int,int)): Implemented.
	(createImage(InputStream)): New helper method.

2006-07-14  Tania Bento  <tbento@redhat.com>

	* java/awt/FlowLayout.java
	(setHgap): No Excpetion should be thrown if hgap has
	a negative value.
	(setVgap): No Exception should be thrown if vgap has
	a negative value.

2006-07-14  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/MultiPixelPackedSampleModel.java: 
	Added API docs all over.

2006-07-14  Matt Wringe  <mwringe@redhat.com>

	* gnu/javax/crypto/jce/cipher/CipherAdapter.java 
	(engineInit): Throw InvalidAlgorithmParameterException
	for invalid IVParameterSpec IV length.

2006-07-14  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/MultiPixelPackedSampleModel.java
	(createDataBuffer): Include dataBitOffset in calculating the size for
	the data buffer.

2006-07-14  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/MultiPixelPackedSampleModel.java
	(getSampleSize()): Return a copy of the array,
	(getTransferType()): New method override.

2006-07-14  Roman Kennke  <kennke@aicas.com>

	* java/awt/CardLayout.java
	(show): Validate parent to make sure that the layout is
	valid.

2006-07-14  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(enable): Added tree locking.
	(disable): Added tree locking.
	(show): Added tree locking.
	(hide): Added tree locking.
	(getLocationOnScreen): Added tree locking.
	(reshape): Added tree locking.