@@ -1,3 +1,8 @@
+2006-07-14  Sven de Marothy  <sven@physto.se>
+
+	* java/awt/image/DataBuffer.java
+	(DataBuffer): Call constructors in the correct order,
+	
 2006-07-14  Mark Wielaard  <mark@klomp.org>
 
 	Revert to previous implementation.
